[package]
name = "twit-rip"
version = "0.1.0"
authors = ["gopye <gopye@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.14.1"
log = "0.4.11"
env_logger = "0.8.1"
egg-mode = { version = "0.15", features = ["rustls"], default-features = false }
futures = "0.3"
tokio = { version = "0.2.8", features = ["time", "rt-core", "macros"] }
yansi = "0.5.0"